# DeployWerk_V2

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/deploywerk-agent/: Cargo.toml
crates/deploywerk-agent/src/: main.rs
crates/deploywerk-api/: Cargo.toml
crates/deploywerk-api/migrations/: 20250411000000_initial.sql  20260115120000_initial_postgres.sql  20260411130000_servers.sql  20260412120000_destinations.sql  20260412130000_applications_deploy_jobs.sql  20260412140000_application_env_domains.sql  20260414110500_perf_indexes.sql  20260414141000_deploy_job_object_storage.sql  20260414142000_application_runtime_volumes.sql  20260420120000_placeholder_surfaces.sql  20260421120000_git_auto_deploy.sql  20260422140000_git_build_deploy.sql  20260423120000_organizations.sql  20260425120000_platform_admin.sql  20260426120000_authentik_scim.sql  20260427120000_platform_docker_hostnames.sql  20260428120000_gitlab_github_pr_env.sql  20260428120100_notification_email_kind.sql  20260429120000_deploy_jobs_git_base_checks.sql  20260430120000_rollback_runtime_logs.sql  20260501120000_deploy_control_plane.sql  20260502120000_team_secrets.sql  20260503120000_audit_chain_hint.sql  20260504120000_application_memberships.sql  20260504130000_more_perf_indexes.sql  20260614120000_otlp_trace_batches.sql  20260614121000_team_secret_versions.sql  20260614122000_team_audit_log.sql  20260614123000_api_tokens_expiry.sql  20260614124000_org_mfa_and_saml.sql  20260614125000_mail_platform_phase1.sql  20260615120000_api_tokens_allowed_cidrs.sql  20260615121000_application_deploy_hooks.sql
crates/deploywerk-api/migrations_sqlite/: 20260115120000_initial.sql  20260411130000_servers.sql  20260412120000_destinations.sql  20260412130000_applications_deploy_jobs.sql  20260412140000_application_env_domains.sql  20260414110500_perf_indexes.sql  20260414141000_deploy_job_object_storage.sql  20260414142000_application_runtime_volumes.sql  20260420120000_placeholder_surfaces.sql  20260421120000_git_auto_deploy.sql  20260422140000_git_build_deploy.sql  20260423120000_organizations.sql  20260425120000_platform_admin.sql  20260426120000_authentik_scim.sql  20260427120000_platform_docker_hostnames.sql  20260428120000_gitlab_github_pr_env.sql  20260428120100_notification_email_kind.sql  20260429120000_deploy_jobs_git_base_checks.sql  20260430120000_rollback_runtime_logs.sql  20260501120000_deploy_control_plane.sql  20260502120000_team_secrets.sql  20260503120000_audit_chain_hint.sql  20260504120000_application_memberships.sql  20260504130000_more_perf_indexes.sql  20260614120000_otlp_trace_batches.sql  20260614121000_team_secret_versions.sql  20260614122000_team_audit_log.sql  20260614123000_api_tokens_expiry.sql  20260614124000_org_mfa_and_saml.sql  20260614125000_mail_platform_phase1.sql  20260615120000_api_tokens_allowed_cidrs.sql  20260615121000_application_deploy_hooks.sql
crates/deploywerk-api/src/: admin.rs  applications.rs  audit.rs  auth.rs  cli_invoke.rs  config.rs  crypto_keys.rs  db.rs  deploy_schedule.rs  destinations.rs  entitlements.rs  error.rs  github_app_api.rs  handlers.rs  integrations.rs  lib.rs  mail.rs  mail_platform.rs  main.rs  mfa.rs  notifications.rs  oidc.rs  organizations.rs  permissions_catalog.rs  rbac.rs  saml.rs  scim.rs  seed.rs  servers.rs  slug.rs  sql_compat.rs  team_platform.rs  team_secrets.rs  webhook_github.rs
crates/deploywerk-cli/: Cargo.toml
crates/deploywerk-cli/src/: main.rs
crates/deploywerk-core/: Cargo.toml
crates/deploywerk-core/src/: lib.rs
docker/: Dockerfile.api  Dockerfile.web  nginx-web.conf
docs/: BARE_METAL.md  DEPLOYMENT.md  DEPLOY_STRATEGIES.md  ENTERPRISE_GAPS.md  LOGICAL_CAPABILITY_MAP.md  MAIL_DEV.md  MATRIX_FUTURE.md  PRODUCTION_CHECKLIST.md  README.md  REGISTRY_INTEGRATION.md  STATUS.md  USE_CASES_AND_SCENARIOS.md  orbytals-install-verification.md
docs/spec/: 00-overview.md  08-mail-platform.md
docs/traefik/: orbytals-file-provider.example.yml
examples/orbytals-traefik-edge/traefik/: .env.example  deploywerk.env.example  docker-compose.yml  traefik.yml
examples/orbytals-traefik-edge/traefik-labels/: forgejo.yml  mailcow-nginx.yml  synapse.yml  technitium.yml
examples/orbytals-traefik-edge/traefik/dynamic/: dashboard-auth.yml.example  dashboard.yml  http-redirect.yml  middlewares.yml  native-services.yml
scripts/: deploywerk-caddy.sh  deploywerk-dev-authentik.ps1  deploywerk-dev.sh  orbytals-install.sh  run-deploywerk-for-caddy.sh  server-bootstrap-orbytals.sh  traefik-edge-migrate-orbytals.sh  verify-e2e-git-deploy.ps1
terraform/examples/: minimal.tf
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/scripts/: check-bundle-size.mjs
web/src/: App.tsx  api.ts  appShellContext.ts  auth.tsx  index.css  lazyPages.ts  oidc.ts  toast.ts  vite-env.d.ts
web/src/components/: AppShell.tsx  MarketingLayout.tsx  PublicFooter.tsx  PublicNav.tsx
web/src/components/dashboard/: SidebarNav.tsx  TopHeader.tsx  UserMenu.tsx
web/src/components/platform/: PlatformIntegrationsPanel.tsx
web/src/pages/: ApplicationsPage.tsx  DashboardPage.tsx  DemoPage.tsx  DestinationsPage.tsx  EnvironmentsPage.tsx  HomePage.tsx  InvitePage.tsx  LoginPage.tsx  OidcCallbackPage.tsx  PricingPage.tsx  PrivacyPage.tsx  ProjectsPage.tsx  RegisterPage.tsx  ServerDockerPage.tsx  ServersPage.tsx  TeamInvitePage.tsx  TermsPage.tsx  TokensPage.tsx
(+41 files in other folders)
