[workspace]
resolver = "2"
members = [
    "crates/deploywerk-core",
    "crates/deploywerk-api",
    "crates/deploywerk-cli",
    "crates/deploywerk-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/chavanashutosh/DeployWerk_V2"
homepage = "https://github.com/chavanashutosh/DeployWerk_V2"

[profile.release]
lto = "thin"
codegen-units = 1
