[package]
name = "deploywerk-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DeployWerk host agent (heartbeat)"

[[bin]]
name = "deploywerk-agent"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
