[package]
name = "deploywerk-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DeployWerk HTTP API"

[[bin]]
name = "deploywerk-api"
path = "src/main.rs"

[dependencies]
deploywerk-core = { path = "../deploywerk-core" }
axum = { version = "0.8", features = ["macros", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "uuid", "chrono"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9.3"
thiserror = "2.0"
dotenvy = "0.15"
anyhow = "1.0"
