[package]
name = "deploywerk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DeployWerk command-line client"

[[bin]]
name = "deploywerk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
directories = "5.0"
anyhow = "1.0"
rpassword = "7.3"
uuid = { version = "1.11", features = ["v4"] }
tabwriter = "1.4"
